--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@
 font-family: "Roboto", serif;*/
 body {font-family: "Roboto", sans-serif;
 color: #434455;
-background-color: #fff;}
+background-color: #fff;
+}
 /* defaul */
 
 ul, ol {list-style-type: none;
@@ -19,7 +20,11 @@ a {text-decoration: none;}
     display: flex;
     align-items: center;
 }
-
+.container {
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 15px;
+}
 .page-header{
     border-bottom: 1px solid #e7e9fc;
 }
@@ -89,7 +94,8 @@ margin-left: auto;}
 .footer-text{color: #F4F4FD;
     line-height: 1.5;
     letter-spacing: 0.02em;}
-.team {background-color: #F4F4FD;}
+.team {background-color: #F4F4FD;
+    place-items: center;}
 .button-section {
     background-color: #2e2f42;
 }
@@ -139,7 +145,11 @@ margin-left: auto;}
 .team-list {
     display: flex;
     align-items: center;
+    gap: 24px;
+    
 }
+
+
 
 .item-paraghraf { font-size: 16px;
     line-height: 1.5;
@@ -152,7 +162,8 @@ margin-left: auto;}
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;}
-.team-item {background-color: #FFFFFF}
+.team-item {background-color: #FFFFFF;
+    border-bottom: 1px solid #e7e9fc;}
 .portfolio-header {font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -169,6 +180,7 @@ margin-left: auto;}
 .portfolio-list {
     display: flex;
     align-items: center;
+    gap: 24px;
 }
 address {font-style: normal}
 .portfolio-description {line-height: 1.5;
