--- a/css/styles.css
+++ b/css/styles.css
@@ -89,11 +89,16 @@ margin-left: auto;}
 
 /*footer*/
 
-.page-footer {background-color: #2E2F42;}
+.page-footer {background-color: #2E2F42;
+padding-right: 1020px;
+padding-left: 152px;
+padding-top: 100px;
+padding-bottom: 100px;}
 .footer-logo .logo-part {color: #F4F4FD}
 .footer-text{color: #F4F4FD;
     line-height: 1.5;
-    letter-spacing: 0.02em;}
+    letter-spacing: 0.02em;
+margin-top: 16px;}
 .team {background-color: #F4F4FD;
     place-items: center;}
 .button-section {
@@ -145,7 +150,10 @@ margin-left: auto;}
 .team-list {
     display: flex;
     align-items: center;
+    place-items: center;
     gap: 24px;
+    margin-top: 72px;
+    padding-bottom: 120px;
     
 }
 
@@ -155,27 +163,35 @@ margin-left: auto;}
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    max-width: 264px;
 }
 .team-header {font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: #2e2f42;}
+    color: #2e2f42;
+padding-top: 120px;}
 .team-item {background-color: #FFFFFF;
-    border-bottom: 1px solid #e7e9fc;}
+    border: 2px solid #e7e9fc;}
 .portfolio-header {font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     line-height: 1.2;
     text-transform: capitalize;
-    color: #2e2f42;}
+    color: #2e2f42;
+    margin-bottom: 24px;}
 .portfolio-title {font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+}
+.portfolio-item {
+    background-color: #FFFFFF;
+    border: 2px solid #e7e9fc;
+    margin-top: 48px;
 }
 .portfolio-list {
     display: flex;
@@ -210,4 +226,11 @@ margin-bottom: 24px;}
     padding-bottom: 120px;
     display: block;
     border-bottom: 1px solid #e7e9fc;
+}
+.footer-container {max-width: 264px;}
+.portfolio {background-color: #ffffff;
+    place-items: center;}
+.portfolio-container{
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
