--- a/css/styles.css
+++ b/css/styles.css
@@ -104,17 +104,20 @@ margin-top: 16px;}
     place-items: center;}
 .button-section {
     background-color: #2e2f42;
+    padding: 188px 0;
 }
 
 .container-button{padding: 188px;}
 
 .button-header {font-size: 56px;
     display: block;
-    align-items: center;
+    
     line-height: 1.07;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     letter-spacing: 0.02em;
-    color: #ffffff;}
+    color: #ffffff;
+    max-width: 496px;}
 .header-button {
     background-color: #4D5AE5;
     font-family: "Roboto", sans-serif;
@@ -132,6 +135,10 @@ margin-top: 16px;}
     padding-right: 32px;
     padding-left: 32px;
     padding-bottom: 16px;
+    min-width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    border: none; 
 }
 .header-button:hover {background-color: #404BBF}
 .header-button:focus {background-color: #404BBF}
