--- a/css/styles.css
+++ b/css/styles.css
@@ -228,7 +228,8 @@ address {font-style: normal}
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-margin-bottom: 24px;}
+margin-bottom: 24px;
+visibility: hidden;}
 .benefits-list-container{
     padding-top: 120px;
     padding-bottom: 120px;
@@ -242,3 +243,4 @@ margin-bottom: 24px;}
     padding-top: 120px;
     padding-bottom: 120px;
 }
+.benefits-section {padding: 120px 0}
