--- a/css/styles.css
+++ b/css/styles.css
@@ -91,15 +91,13 @@ margin-left: auto;}
 /*footer*/
 
 .page-footer {background-color: #2E2F42;
-padding-right: 1020px;
-padding-left: 152px;
-padding-top: 100px;
-padding-bottom: 100px;}
-.footer-logo .logo-part {color: #F4F4FD}
+   padding: 100px 0;}
+.footer-logo .logo-part {color: #F4F4FD; 
+    display: inline-block;
+    margin-bottom: 16px;}
 .footer-text{color: #F4F4FD;
     line-height: 1.5;
-    letter-spacing: 0.02em;
-margin-top: 16px;}
+    letter-spacing: 0.02em;}
 .team {background-color: #F4F4FD;
     place-items: center;}
 .button-section {
