add first steps to finish this work

--- a/css/styles.css
+++ b/css/styles.css
@@ -241,4 +241,4 @@ visibility: hidden;}
     padding-top: 120px;
     padding-bottom: 120px;
 }
-.benefits-section {padding: 120px 0}
+.benefits-section {padding: 120px 0;}
