--- a/css/styles.css
+++ b/css/styles.css
@@ -187,7 +187,7 @@ padding-top: 120px;}
     line-height: 1.2;
     text-transform: capitalize;
     color: #2e2f42;
-    margin-bottom: 24px;}
+    margin-bottom: 72px}
 .portfolio-title {font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -197,12 +197,13 @@ padding-top: 120px;}
 .portfolio-item {
     background-color: #FFFFFF;
     border: 2px solid #e7e9fc;
-    margin-top: 48px;
+    width: calc((100% - 48px) / 3);
 }
 .portfolio-list {
     display: flex;
     align-items: center;
     gap: 24px;
+    flex-wrap: wrap;
 }
 address {font-style: normal}
 .portfolio-description {line-height: 1.5;
