add first steps to finish this work

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ margin-left: auto;}
     padding: 188px 0;
 }
 
-.container-button{padding: 188px;}
+.container-button{padding: 188px 0;}
 
 .button-header {font-size: 56px;
     display: block;
