--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,8 @@ margin-left: auto;}
     line-height: 1.5;
     letter-spacing: 0.02em;}
 .team {background-color: #F4F4FD;
-    place-items: center;}
+    place-items: center;
+    padding: 120px 0; }
 .button-section {
     background-color: #2e2f42;
     padding: 188px 0;
@@ -177,9 +178,11 @@ margin-left: auto;}
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
-padding-top: 120px;}
+padding-top: 120px;
+margin-bottom: 72px}
 .team-item {background-color: #FFFFFF;
-    border: 2px solid #e7e9fc;}
+    border-radius: 0px 0px 4px 4px; 
+    calc((100% - 72px) / 4);}
 .portfolio-header {font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -254,3 +257,4 @@ visibility: hidden;}
     white-space: nowrap;
     border: 0;
 }
+.item-container {padding: 32px 0;}
