--- a/css/styles.css
+++ b/css/styles.css
@@ -196,11 +196,13 @@ margin-bottom: 72px}
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: center; 
 }
 .portfolio-item {
     background-color: #FFFFFF;
     border: 2px solid #e7e9fc;
     width: calc((100% - 48px) / 3);
+    text-align: center;
 }
 .portfolio-list {
     display: flex;
