--- a/css/styles.css
+++ b/css/styles.css
@@ -242,7 +242,8 @@ visibility: hidden;}
 }
 .footer-container {max-width: 264px;}
 .portfolio {background-color: #ffffff;
-    place-items: center;}
+    place-items: center;
+    padding-top: 120px; padding-bottom: 120px; }
 .portfolio-container{
     padding-top: 120px;
     padding-bottom: 120px;
@@ -262,3 +263,4 @@ visibility: hidden;}
 .item-container {padding: 32px 0;}
 .logo-container {display: inline-block;
     margin-bottom: 16px;}
+    .portfolio-section {}
