--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ padding-top: 120px;
 margin-bottom: 72px}
 .team-item {background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px; 
-    calc((100% - 72px) / 4);}
+    }
 .portfolio-header {font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -263,4 +263,4 @@ visibility: hidden;}
 .item-container {padding: 32px 0;}
 .logo-container {display: inline-block;
     margin-bottom: 16px;}
-    .portfolio-section {}
+    
