add first steps to finish this work

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ margin-left: auto;}
     text-transform: capitalize;
     color: #2e2f42;
 padding-top: 120px;
-margin-bottom: 72px}
+margin-bottom: 72px;}
 .team-item {background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px; 
     }
