--- a/css/styles.css
+++ b/css/styles.css
@@ -184,12 +184,12 @@ margin-bottom: 72px;}
     }
 .portfolio-header {font-size: 36px;
     line-height: 1.11;
-    text-align: center;
     letter-spacing: 0.02em;
     line-height: 1.2;
     text-transform: capitalize;
     color: #2e2f42;
-    margin-bottom: 72px}
+    margin-bottom: 72px;
+    text-align: center;}
 .portfolio-title {font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
