--- a/css/styles.css
+++ b/css/styles.css
@@ -167,12 +167,15 @@ margin-left: auto;}
 
 
 .item-paraghraf { font-size: 16px;
+    display: block;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
     max-width: 264px;
+    text-align: center;
 }
 .team-header {font-size: 36px;
+    display: block;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
@@ -259,7 +262,8 @@ visibility: hidden;}
     white-space: nowrap;
     border: 0;
 }
-.item-container {padding: 32px 0;}
+.item-container {padding: 32px 0;
+display: block;}
 .logo-container {display: inline-block;
     margin-bottom: 16px;}
     
