--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,9 @@ margin-left: auto;}
     color: #2e2f42;
 margin-bottom: 72px;}
 .team-item {background-color: #FFFFFF;
-    border-radius: 0px 0px 4px 4px; 
+    border-radius: 0px 0px 4px 4px;
+    text-align: center;
+    display: block;
     }
 .portfolio-header {font-size: 36px;
     line-height: 1.11;
