--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,7 @@ margin-bottom: 72px;}
     align-items: center;
     gap: 24px;
     flex-wrap: wrap;
+    row-gap: 48px;
 }
 address {font-style: normal}
 .portfolio-description {line-height: 1.5;
@@ -268,4 +269,6 @@ visibility: hidden;}
 display: block;}
 .logo-container {display: inline-block;
     margin-bottom: 16px;}
-    
+.portfolio-div {padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;}
