--- a/css/styles.css
+++ b/css/styles.css
@@ -271,4 +271,6 @@ display: block;}
     margin-bottom: 16px;}
 .portfolio-div {padding: 32px 16px;
     border: 1px solid #e7e9fc;
-    border-top: none;}
+    border-top: none;
+    margin-bottom: 8px;
+}
