add first steps to finish this work

--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,7 @@ margin-bottom: 72px;}
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-align: center; 
+    margin-bottom: 8px
 }
 .portfolio-item {
     background-color: #FFFFFF;
