--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ margin-left: auto;}
     letter-spacing: 0.02em;
     color: #434455;
     max-width: 264px;
-    text-align: center;
+    text-align: left;
 }
 .team-header {font-size: 36px;
     display: block;
