--- a/css/styles.css
+++ b/css/styles.css
@@ -166,14 +166,15 @@ margin-left: auto;}
 
 
 
-.item-paraghraf { font-size: 14px;
+.item-paraghraf { font-size: 16px;
     display: block;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+    line-height: 24px;
+    letter-spacing: 2%;
     color: #434455;
     max-width: 264px;
+    max-height: 72px;
     text-align: left;
-    font-weight: 100;
+    font-weight: 400;
 }
 .team-header {font-size: 36px;
     display: block;
