--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,6 @@ margin-left: auto;}
     letter-spacing: 2%;
     color: #434455;
     max-width: 264px;
-    max-height: 72px;
     text-align: left;
     font-weight: 400;
 }
@@ -277,4 +276,14 @@ display: block;}
     border: 1px solid #e7e9fc;
     border-top: none;
     margin-bottom: 8px;
+}
+.item-paraghrafs {
+    font-size: 16px;
+    display: block;
+    line-height: 24px;
+    letter-spacing: 2%;
+    color: #434455;
+    max-width: 264px;
+    text-align: center;
+    font-weight: 400;
 }
