--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,9 @@ margin-left: auto;}
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2e2f42;}
+    color: #2e2f42;
+    margin-right: 24px;
+    }
 .item-header {font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -229,7 +231,6 @@ address {font-style: normal}
 }
 .benefits-container {
     display: flex;
-    align-items: center;
     gap: 24px;
     margin-right: 152px;
     margin-left: 152px;
@@ -255,7 +256,6 @@ visibility: hidden;}
     padding-top: 120px;
     padding-bottom: 120px;
 }
-.benefits-section {padding: 120px 0;}
 .visually-hidden {
     position: absolute;
     width: 1px;
