--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ margin-left: auto;}
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-right: 24px;
-    width: 264px;
+    width: calc((100% - 72px) / 4);
     flex-shrink: 0;
     }
 .item-header {font-weight: 500;
@@ -244,7 +244,6 @@ address {font-style: normal}
     margin-right: auto;
 visibility: hidden;}
 .benefits-list-container{
-    padding: 120px 0;
     display: block;
     border-bottom: 1px solid #e7e9fc;
 }
@@ -286,4 +285,7 @@ display: block;}
     max-width: 264px;
     text-align: center;
     font-weight: 400;
+}
+.benefits-section{
+    padding: 120px 0 120px
 }
