--- a/css/styles.css
+++ b/css/styles.css
@@ -91,13 +91,18 @@ margin-left: auto;}
 /*footer*/
 
 .page-footer {background-color: #2E2F42;
-   padding: 100px 0;}
+   padding: 100px 0;
+    height: 312px;}
 .footer-logo .logo-part {color: #F4F4FD; 
     display: inline-block;
-    margin-bottom: 16px;}
+    margin-bottom: 0}
 .footer-text{color: #F4F4FD;
     line-height: 1.5;
-    letter-spacing: 0.02em;}
+    letter-spacing: 0.02em;
+    font-size: 16px;
+    text-align: left;
+    font-weight: 400;
+    max-width: 264px;}
 .team {background-color: #F4F4FD;
     place-items: center;
     padding: 120px 0; }
@@ -116,7 +121,8 @@ margin-left: auto;}
     margin-right: auto;
     letter-spacing: 0.02em;
     color: #ffffff;
-    max-width: 496px;}
+    max-width: 496px;
+    text-align: center;}
 .header-button {
     background-color: #4D5AE5;
     font-family: "Roboto", sans-serif;
@@ -163,9 +169,7 @@ margin-left: auto;}
     align-items: center;
     place-items: center;
     gap: 24px;
-    margin-top: 72px;
     padding-bottom: 120px;
-    
 }
 
 
@@ -186,7 +190,8 @@ margin-left: auto;}
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
-margin-bottom: 72px;}
+    padding-bottom: 72px;
+    padding-top: 120px;}
 .team-item {background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
     display: block;
@@ -198,25 +203,25 @@ margin-bottom: 72px;}
     line-height: 1.2;
     text-transform: capitalize;
     color: #2e2f42;
-    margin-bottom: 72px;
+    padding-bottom: 72px;
     text-align: center;}
 .portfolio-title {font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    text-align: center; 
+    text-align: left; 
     margin-bottom: 8px
 }
 .portfolio-item {
     background-color: #FFFFFF;
     width: calc((100% - 48px) / 3);
-    text-align: center;
+    text-align: left;
     row-gap: 48px;
 }
 .portfolio-list {
     display: flex;
-    align-items: center;
+    align-items: left;
     gap: 24px;
     flex-wrap: wrap;
     row-gap: 48px;
@@ -233,7 +238,6 @@ address {font-style: normal}
 }
 .benefits-container {
     display: flex;
-    gap: 24px;
     justify-content: space-between;
     flex-wrap: nowrap;
 }
@@ -242,10 +246,9 @@ address {font-style: normal}
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-visibility: hidden;}
+    visibility: hidden;}
 .benefits-list-container{
     display: block;
-    border-bottom: 1px solid #e7e9fc;
 }
 .footer-container {max-width: 264px;}
 .portfolio {background-color: #ffffff;
@@ -288,4 +291,16 @@ display: block;}
 }
 .benefits-section{
     padding: 120px 0 120px
+}
+.team{
+    padding: 0;
+}
+.portfolio-section{padding: 0;}
+.portfolio-div {
+    margin: 0;
+    width: 360px;
+    height: 120px;
+}
+.logo-container {margin-bottom: 0;
+padding-bottom: 16px;
 }
